--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,7 @@ body {
 .icon {
     width: 40px;
     height: auto;
+    border-radius: 4px;
     
     cursor: pointer;
     user-select: none;
@@ -45,7 +46,7 @@ body {
 }
 
 .icon:hover {
-    background-color: #72757e;
+    background-color: #7f5af0;
 }
 
 #icon-menu {
@@ -63,10 +64,10 @@ body {
     align-items: center;
     
     width: 100%;
-    height: 40px;
+    height: 50px;
     gap: 10px;
     
-    background-color: #16161a;
+    background-color: #242629;
 }
 
 #footer p {
@@ -101,7 +102,8 @@ body {
     position: relative;
     width: 300px;
     height: 100%;
-    
+    padding: 20px 0px;
+    gap: 20px;
     
     display: flex;
     flex-direction: column;
@@ -139,15 +141,23 @@ body {
     color: #fffffe;
 }
 
+.dash-bullet {
+    content: url('../img/icon-bullet.svg');
+    height: auto;
+    width: 16px;
+}
+
 .dash-item {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    user-select: none;
     
     gap: 10px;
     padding-left: 10px;
+    border-radius: 4px;
     
-    width: 50%;
+    width: 80%;
     height: 40px;
 }
 
@@ -171,4 +181,96 @@ body {
 
 #inbox img {
     content: url('../img/icon-inbox.svg');
+}
+
+#today img {
+    content: url('../img/icon-today.svg');
+}
+
+#upcoming img {
+    content: url('../img/icon-upcoming.svg');
+}
+
+#projects {
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+    
+    width: 80%;
+    height: 100%;
+    user-select: none;
+}
+
+#projects-tab {
+    display: flex;
+    align-items: center;
+    
+    cursor: pointer;
+    
+    width: 100%;
+    height: 40px;
+    padding-left: 10px;
+    gap: 10px;
+}
+
+#projects-tab:hover {
+    background-color: #7f5af0;
+}
+
+#projects-tab > span + img {
+    margin-left: auto;
+}
+
+#projects-add {
+    content: url('../img/icon-add-projects.svg');
+    width: 24px !important;
+    height: auto;
+    cursor: pointer;
+}
+
+#projects-toggle {
+    content: url('../img/icon-arrow.svg');
+    cursor: pointer;
+    transition: .2s;
+}
+
+#projects-toggle:hover,
+#projects-add:hover {
+    filter: brightness(80%);
+}
+
+.projects-add-close {
+    transform: rotateZ(90deg);
+}
+
+.projects-list-hide {
+    max-height: 0px !important;
+}
+
+#projects-list {
+    width: 100%;
+    height: auto;
+    max-height: 100%;
+    
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    
+    transition: max-height .3s;
+}
+
+.project {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    
+    gap: 10px;
+    width: 100%;
+    height: 40px;
+    padding-left: 10px;
+}
+
+.project:hover {
+    background-color: #7f5af0;
 }
