--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,6 +66,7 @@ body {
     width: 100%;
     height: 50px;
     gap: 10px;
+    margin-top: auto;
     
     background-color: #242629;
 }
@@ -168,6 +169,10 @@ body {
 }
 
 #todo-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     width: 100%;
     height: 100%;
     
@@ -212,6 +217,7 @@ body {
     height: 40px;
     padding-left: 10px;
     gap: 10px;
+    border-radius: 4px;
 }
 
 #projects-tab:hover {
@@ -269,6 +275,7 @@ body {
     width: 100%;
     height: 40px;
     padding-left: 10px;
+    border-radius: 4px;
 }
 
 .project:hover {
