--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -285,3 +285,158 @@ body {
 .project:hover {
     background-color: #7f5af0;
 }
+
+#projects-add-form-cnt {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    right: 50%;
+    bottom: 50%;
+}
+
+#projects-add-form-cnt *:not(#projects-add-form-overlay) {
+    z-index: 2;
+}
+
+.form-hide {
+    display: none !important;
+}
+
+#projects-add-form-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    
+    width: 100%;
+    height: 100%;
+    
+    z-index: 1;
+    opacity: 0.5;
+    background-color: black;
+}
+
+#projects-add-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+    height: auto;
+    width: 400px;
+    padding: 30px;
+    border-radius: 4px;
+    gap: 30px;
+    
+    background-color: #242629;
+}
+
+#projects-add-form > span {
+    color: #fffffe;
+    border-bottom: 1px solid #16161a;
+    
+    width: 100%;
+    padding-bottom: 20px;
+    
+    font-size: 24px;
+    font-weight: 800;
+}
+
+#projects-add-form label {
+    margin-left: 4px;
+    color: #fffffe;
+    font-weight: 800;
+}
+
+#projects-add-form input[type=text] {
+    width: 100%;
+    border-radius: 4px;
+    
+    background-color: #94a1b2;
+    color: #16161a;
+    
+    font-weight: 600;
+}
+
+#projects-add-form input[type=text]:focus {
+    outline: #7f5af0 solid 1px;
+}
+
+#form-name {
+    display: flex;
+    flex-direction: column;
+    
+    width: 100%;
+    gap: 6px;
+}
+
+#form-btns {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+    padding-top: 20px;
+    
+    border-top: 1px solid #16161a;
+}
+
+#form-btn-cancel,
+#form-btn-add {
+    background-color: #7f5af0;
+    color: #fffffe;
+    
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    
+    width: 80px;
+    height: 30px;
+}
+
+#form-btn-cancel {
+    background-color: #72757e !important;
+}
+
+#form-btn-cancel:hover {
+    background-color: #4A4D56 !important;
+}
+
+#form-btn-add:hover {
+    background-color: #5732C8 !important;
+}
+
+#form-color-picker {
+    display: flex;
+    align-items: center;
+    
+    gap: 10px;
+    
+    background-color: #94a1b2;
+    border: none;
+}
+
+#color-picker {
+    list-style: none;
+}
+
+.color-picker-item {
+    display: flex;
+    align-items: center;
+    
+    gap: 10px;
+    
+    color: #fffffe;
+}
+
+.color-picker-color {
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+}
