--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -326,7 +326,6 @@ body {
     justify-content: space-between;
     align-items: flex-start;
     
-    height: auto;
     width: 400px;
     padding: 30px;
     border-radius: 4px;
@@ -355,6 +354,7 @@ body {
 #projects-add-form input[type=text] {
     width: 100%;
     border-radius: 4px;
+    box-sizing:border-box;
     
     background-color: #94a1b2;
     color: #16161a;
@@ -380,9 +380,10 @@ body {
     align-items: center;
     
     width: 100%;
-    height: 100%;
+    height: 60px;
     gap: 10px;
     padding-top: 20px;
+    margin-top: auto;
     
     border-top: 1px solid #16161a;
 }
@@ -412,18 +413,59 @@ body {
     background-color: #5732C8 !important;
 }
 
+#form-color {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 3 !important;
+    
+    width: 100%;
+    height: 100%;
+}
+
 #form-color-picker {
     display: flex;
     align-items: center;
     
     gap: 10px;
+    border-radius: 4px;
+    width: 100%;
+    height: 24px;
     
     background-color: #94a1b2;
     border: none;
 }
 
-#color-picker {
+#form-color-picker:hover {
+    background-color: #6C798A;
+}
+
+#color-picker-list {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    
+    margin-top: 26px;
+    width: 100%;
+    padding: 0px;
+    border-radius: 4px;
+    
+    max-height: 200px;
+    
+    background-color: #94a1b2;
+    overflow-y: auto;
+    
     list-style: none;
+    list-style-type: none;
+}
+
+.color-picker-name {
+    pointer-events: none;
+}
+
+.hide-color {
+    display: none !important;
+    
 }
 
 .color-picker-item {
@@ -431,12 +473,22 @@ body {
     align-items: center;
     
     gap: 10px;
+    height: 24px;
+    width: 100%;
+    padding-left: 6px;
+    border-radius: 4px;
     
+    box-sizing: border-box;
     color: #fffffe;
+}
+
+.color-picker-item:hover {
+    background-color:#6C798A;
 }
 
 .color-picker-color {
     border-radius: 50%;
     height: 10px;
     width: 10px;
+    pointer-events: none;
 }
