Add max length and overflow to project names

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -144,6 +144,9 @@ body {
 
 .dash-text {
     color: #fffffe;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 80%;
 }
 
 .dash-bullet {
