--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -102,7 +102,10 @@ body {
 #dashboard {
     position: relative;
     width: 300px;
+    min-width: 300px;
     height: 100%;
+    max-height: 100%;
+    
     padding: 0px;
     gap: 20px;
     
@@ -146,7 +149,22 @@ body {
     color: #fffffe;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 80%;
+    max-width: 160px;
+}
+
+.dash-options {
+    width: 20px;
+    height: 20px;
+    
+    text-align: center;
+    
+    margin-left: auto;
+    outline: none;
+    border: none;
+}
+
+.dash-options:hover {
+    filter: brightness(80%);
 }
 
 .dash-bullet {
@@ -173,6 +191,10 @@ body {
     background-color: #7f5af0;
     cursor: pointer;
     user-select: none;
+}
+
+.dash-active {
+    background-color: #7f5af0;
 }
 
 #todo-content {
@@ -211,6 +233,7 @@ body {
     
     width: 80%;
     height: 100%;
+    max-height: 60%;
     user-select: none;
 }
 
@@ -222,6 +245,7 @@ body {
     
     width: 100%;
     height: 40px;
+    min-height: 40px;
     padding-left: 10px;
     gap: 10px;
     border-radius: 4px;
@@ -266,23 +290,86 @@ body {
     height: auto;
     max-height: 100%;
     
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    
     padding: 0;
     margin: 0;
     
     transition: max-height .3s;
 }
 
+#projects-list-options {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    top: 0;
+    left: 0;
+    
+    width: 60px;
+    height: auto;
+    gap: 10px;
+    padding: 4px 0px;
+    border-radius: 4px;
+    z-index: 6;
+    
+    background-color: #242629;
+}
+
+#projects-list-options *:not(#options-overlay) {
+    z-index: 6;
+}
+
+#options-overlay {
+    position: fixed;
+    z-index: 5;
+    
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.1;
+}
+
+input[type=image] {
+    position: relative;
+}
+
+#projects-list-options button {
+    width: 90%;
+    height: 100%;
+    
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    
+    background-color: #242629;
+    color: #fffffe;
+}
+
+#projects-list-options button:hover {
+    background-color: #7f5af0;
+}
+
 .project {
     display: flex;
     align-items: center;
     cursor: pointer;
+    box-sizing: border-box;
     
-    gap: 10px;
     width: 100%;
     height: 40px;
     padding-left: 10px;
+    padding-right: 10px;
     border-radius: 4px;
+    
+    margin-bottom: 10px;
+}
+
+.project > div {
+    margin-right: 10px;
 }
 
 .project:hover {
@@ -474,7 +561,7 @@ body {
     pointer-events: none;
 }
 
-.hide-color {
+.hide {
     display: none !important;
     
 }
@@ -502,4 +589,13 @@ body {
     height: 10px;
     width: 10px;
     pointer-events: none;
+}
+
+#todo-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    height: 100%;
+    width: 100%;
 }
