--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -702,3 +702,157 @@ input[type=image] {
     height: auto;
     width: 16px;
 }
+
+.todo-modal {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    
+    gap: 10px;
+    
+    inset: 50% 50% 50% 50%;
+}
+
+.todo-modal-overlay {
+    position: absolute;
+    
+    top: 0;
+    left: 0;
+    
+    width: 100%;
+    height: 100%;
+    
+    background-color: black;
+    opacity: 0.8;
+}
+
+.modal {
+    position: fixed;
+    inset: 50%;
+    margin-left: -200px;
+    margin-top: -150px;
+    box-sizing: border-box;
+    
+    height: 300px;
+    width: 400px;
+    
+    z-index: 1000;
+}
+
+.modal *:not(.modal-overlay) {
+    z-index: 1000;
+}
+
+.modal-overlay {
+    position: fixed;
+    
+    top: 0;
+    left: 0;
+    
+    width: 100%;
+    height: 100%;
+    
+    background-color: black;
+    opacity: 0.8;
+}
+
+.modal-title {
+    color: #fffffe;
+    font-size: 24px;
+    font-weight: 700;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    
+    border-bottom: 1px solid #72757e;
+}
+
+.modal-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    box-sizing: border-box;
+    padding: 20px;
+    
+    gap: 10px;
+    
+    width: 100%;
+    height: 100%;
+    
+    background-color: #242629;
+    border-radius: 4px;
+    border: 2px solid #72757e;
+}
+
+.modal-field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+    
+    align-self: center;
+    
+    width: 80%;
+    max-width: 80%;
+}
+
+.modal-field * {
+    width: 100%;
+}
+
+.modal-field label {
+    color: #94a1b2;
+}
+
+.modal-field input {
+    background-color: #94a1b2;
+    color: #16161a;
+    font-weight: 700;
+    border-radius: 4px;
+}
+
+.modal-field input::placeholder {
+    color: #4A4D56;
+}
+
+.modal-btns {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+    gap: 10px;
+    border-top: 1px solid #72757e;
+    padding-top: 20px;
+}
+
+.modal-btns-cancel,
+.modal-btns-add {
+    width: 60px;
+    height: 30px;
+    
+    border: none;
+    border-radius: 4px;
+    
+    cursor: pointer;
+    color: #fffffe;
+}
+
+.modal-btns-cancel {
+    background-color: #72757e;
+}
+
+.modal-btns-cancel:hover {
+    background-color: #4A4D56;
+}
+
+.modal-btns-add {
+    background-color: #7f5af0;
+}
+
+.modal-btns-add:hover {
+    background-color: #5732C8;
+}
+
+.modal-disabled {
+    display: none !important;
+}
